# serverless-api-framework-python

./: .flake8  .gitignore  .pre-commit-config.yaml  .pylintrc  CHANGELOG.md  LICENSE  README.md  SECURITY.md  app.py  cli.py  pyproject.toml  readthedocs.yml  requirements-dev.txt  requirements.txt  serverless.py  setup.cfg  setup.py  test_integration.py
.github/: CODE_OF_CONDUCT.md  CONTRIBUTING.md  dependabot.yml  pull_request_template.md
.github/ISSUE_TEMPLATE/: bug_report.md  config.yml  feature_request.md
.github/actions/setup-dev/: action.yml
.github/actions/setup-poetry/: action.yml
.github/actions/setup-serverless-framework/: action.yml
.github/workflows/: black.yml  checkov.yml  deploy.yml  doc-development.yml  doc-release.yml  documentation.yaml  integration-gateway.yml  pytest-1.yml  pytest-2.yml  pytest-3.yml  pytest-integration-api.yml  pytest-integration-api.yml.off  pytest-integration-generate-sf.yml  pytest-integration-generate-sf.yml.off  pytest-integration-sf.yml  pytest-integration.yml  pytest.yml  python-publish.yml  quality.yml
deploying/gateway/: 10-default-nginx-conf-from-env.sh  Dockerfile
docs/: Makefile  aws-chalice.md  cli.md  conf.py  config.md  configuring.md  dependencies.md  deploying.md  examples.md  functions-frameworks-research.md  google-functions-framework.md  index.md  requirements.txt  triggers.md
docs/examples/: cron.md  github_actions.md  hello_world.md  pr_notifier.md
docs/source/: conf.py  configuring.rst  deploying.rst  examples.rst  gateway.rst  index.rst
docs/source/examples/: cron.md  github_actions.md  hello_world.md  multiple_modules.md  pr_notifier.md
examples/cron/: handler.py  requirements.txt
examples/github_actions/: README.md  app.py  deploy.yml  requirements.txt
examples/hello_world/: handler.py  requirements.txt
examples/multiple_functions/: app.py  first.py  handler.py  second.py
examples/multiple_modules/: README.md  app.py  query.py  requirements.txt  s3.py  upload.py
examples/pr_notifier/: README.md  notifier.py  requirements.txt
scw_serverless/: __init__.py  api.py  app.py  cli.py  dependencies_manager.py  loader.py  local_app.py  logger.py  utils.py
scw_serverless/config/: function.py  route.py  utils.py
scw_serverless/config/generators/: __init__.py  generator.py  serverless_framework.py  serverlessframework.py  terraform.py
scw_serverless/config/templates/: .gitignore  serverless.yml  terraform.tf.json
scw_serverless/deploy/backends/: __init__.py  scaleway_api_backend.py  serverless_backend.py  serverless_framework_backend.py
scw_serverless/deploy/gateway/: __init__.py  client.py  controller.py  manager.py  models.py  nginx_config.py  nginx_gateway.py
scw_serverless/deploy/gateway/templates/: method_maps.conf.jinja2  nginx.conf.jinja2  proxy.conf.jinja2
scw_serverless/deployment/: __init__.py  api_wrapper.py  client.py  deployment_manager.py  exceptions.py  runtime.py
scw_serverless/events/: cron.py  event.py  schedule.py
scw_serverless/gateway/: __init__.py  gateway_api_client.py  gateway_manager.py  serverless_gateway.py
scw_serverless/triggers/: __init__.py  cron.py
scw_serverless/utils/: commands.py  config.py  credentials.py  files.py  http.py  loader.py  string.py
serverless/: api.py  app.py  cli.py  utils.py
serverless/config/generators/: serverlessframework.py  terraform.py
serverless/config/templates/: .gitignore
src/: serverless.py
src/config/generators/: serverlessframework.py
src/config/templates/: serverless.yml
src/nested_module/: app1.py
tests/: app.py  constants.py  test_app.py  test_cli.py  test_dependencies_manager.py  test_integration.py  utils.py
tests/app_fixtures/: app.py  app_updated.py  cron_app.py  multiple_functions.py  requirements.txt  routed_functions.py
tests/dev/: app.py  cron_app.py  gateway.py  gateway_rest_api.py  multiple-functions.py  multiple_functions.py
tests/integrations/: conftest.py  deploy_wrapper.py  gateway_fixtures.py  project_fixture.py  utils.py
tests/integrations/deploy/: deploy_wrapper.py  test_api_backend.py  test_sf_backend.py
tests/integrations/deploy/gateway/: test_gateway_controller.py
tests/integrations/deployment/: test_deployment.py
tests/integrations/gateway/: test_gateway.py
tests/integrations/generate/: test_sf.py  test_terraform.py
tests/test_config/: test_triggers.py
tests/test_deploy/test_backends/: test_scaleway_api_backend.py
tests/test_deploy/test_gateway/: test_manager.py  test_nginx_config.py
tests/test_deployment/: test_deployment_manager.py
tests/test_events/: test_cron.py
tests/test_gateway/: test_gateway_manager.py
tests/test_triggers/: test_cron.py
tests/test_utils/: test_string.py  test_utils.py
