[tool.poetry]
name = "scw-serverless"
version = "0.0.4"
description = "Framework for writing serverless APIs in Python, using Scaleway functions and containers."
authors = ["Scaleway Serverless Team <opensource@scaleway.com>"]
readme = "README.md"
license = "MIT"
repository = "https://github.com/scaleway/serverless-api-project"
documentation = "https://serverless-api-project.readthedocs.io/en/latest/"
keywords = ["serverless", "scaleway", "functions", "cloud", "faas"]

# Should be one of:
# "Development Status :: 3 - Alpha"
# "Development Status :: 4 - Beta"
# "Development Status :: 5 - Production/Stable"
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "Intended Audience :: Information Technology",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Topic :: Internet",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
]

packages = [{ include = "scw_serverless" }]
include = [
    "scw_serverless/**/*.yaml",
    "scw_serverless/**/*.json",
    "CHANGELOG.md",
]

[tool.poetry.scripts]
scw-serverless = "scw_serverless.cli:main"

[tool.poetry.dependencies]
python = "^3.9"
click = "^8.1.3"
scaleway = ">=0.7,<0.10"
requests = "^2.28.2"
typing-extensions = { version = "^4.4.0", python = "<3.11" }
pyyaml = "^6.0"

[tool.poetry.group.dev.dependencies]
pre-commit = ">=2.21,<4.0"
pytest = "^7.2.0"
pytest-xdist = "^3.1.0"
pylint = "^2.15.10"
pylint-per-file-ignores = "^1.1.0"
responses = "^0.22"

[tool.poetry.group.doc]
optional = true

[tool.poetry.group.doc.dependencies]
myst_parser = "^0.18.1"
sphinx = "^5.3.0"
sphinx_rtd_theme = "^1.1.1"

[tool.pylint]
load-plugins = ["pylint_per_file_ignores"]
disable = "missing-module-docstring"
# Commented Black formatted code.
max-line-length = 89
# Short and common names. e is commonly used for exceptions.
good-names = "i,fp,e"
# Classes with a single responsibility are fine.
min-public-methods = 1

[tool.pylint-per-file-ignores]
"/tests/" = "missing-function-docstring,protected-access"
# Sphinx specific
"/docs/" = "invalid-name,redefined-builtin"

[tool.isort]
profile = "black"

[tool.pyright]
include = ["scw_serverless", "examples"]
exclude = ["**/node_modules", "**/__pycache__", "**/package/**"]

[tool.pydocstyle]
# Compatible with Sphinx
convention = "google"
add_ignore = ["D100", "D107"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
